--- a/template-engines/views/index.pug
+++ b/template-engines/views/index.pug
@@ -3,11 +3,13 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Pug Template Engine
+        //link(rel="stylesheet", href="/static/style.css")
+        link(rel="stylesheet", href="/style.css")
+    title Pug Template Engine
     body
         div
             header
-                h2 Pug Template Engine
+                h2.red Pug Template Engine
 
             section
                 h2 my section of web page
